# ChangeLog for sys-apps/module-init-tools
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.136 2007/12/12 17:31:13 jer Exp $

  12 Dec 2007; Jeroen Roovers <jer@gentoo.org> module-init-tools-3.4.ebuild:
  Stable for HPPA (bug #201444).

  10 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  module-init-tools-3.4.ebuild:
  alpha/ia64 stable wrt #201444

  10 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  module-init-tools-3.4.ebuild:
  Sparc stable --- Bug #201444

  07 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  module-init-tools-3.4.ebuild:
  ppc stable, bug #201444

  07 Dec 2007; Markus Rothe <corsair@gentoo.org>
  module-init-tools-3.4.ebuild:
  Stable on ppc64; bug #201444

  07 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  module-init-tools-3.4.ebuild:
  stable x86, bug 201444

  06 Dec 2007; Steve Dibb <beandog@gentoo.org> module-init-tools-3.4.ebuild:
  amd64 stable, bug 201444

  09 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  module-init-tools-3.4.ebuild:
  Include pregenerated man-pages #195164.

*module-init-tools-3.4 (08 Oct 2007)

  08 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  +module-init-tools-3.4.ebuild:
  Version bump.

*module-init-tools-3.2.2-r3 (13 Apr 2007)

  13 Apr 2007; Mike Frysinger <vapier@gentoo.org>
  +module-init-tools-3.2.2-r3.ebuild:
  Push out incremental updates to update-modules files.

  07 Apr 2007; Mike Frysinger <vapier@gentoo.org> -files/modules-update,
  +files/update-modules, +files/update-modules.8,
  module-init-tools-3.2.2-r2.ebuild:
  Rename to update-modules and move/update the manpage from baselayout.

  27 Mar 2007; Stephen Bennett <spb@gentoo.org>
  module-init-tools-3.2.2-r2.ebuild:
  mips stable

  14 Feb 2007; Jeroen Roovers <jer@gentoo.org>
  module-init-tools-3.2.2-r2.ebuild:
  Stable for HPPA (bug #158637).
