@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX module-init-tools-3.1_generate-modprobe-assume-kernel.patch 3674 RMD160 5012db2e672a0944f112c836b7677a54e4d38615 SHA1 f0a8b49215896581ff4cd08e88de4627bdff9491 SHA256 5cbe34244609cc4915c78612388f9fda64dcf9c5b7d6038e620fc42db4a76efd
 AUX module-init-tools-3.2.2-handle-dupliate-aliases.patch 2345 RMD160 12e3132824dadbf853228dec146347cf2b87f31c SHA1 b2b16636ae61de179d4674dbe5c48868aa1e2ca0 SHA256 6cd1ae6736bec9c72474acb6b7dce68db1ec0703f0b55f312dcfefce7cf56166
 AUX module-init-tools-3.2_pre7-abort-on-modprobe-failure.patch 1425 RMD160 ce073d744e0eb191ef10f3a1186f393b42620813 SHA1 5138c1a5b7ead76d683d5d3f31d7c161b0a4dfb2 SHA256 5a058a5dfae5bd6eaf6fa338b800f477b542dd9da0c09283d274504beb19c3b6
@@ -8,12 +11,21 @@ AUX modutils-2.4.27-gcc.patch 7438 RMD160 a3d1fa1e6dd865e531684882daab881b90d0e1
 AUX modutils-2.4.27-hppa.patch 302 RMD160 15c0b2aadee725ef21370c9f016da6c74b882b6f SHA1 6af5f392dd173eacacc258211c67ef103ccaff49 SHA256 9b4e629a310732129b96766e0c6f185008e98f8429551da85372a01fa59c7d05
 AUX modutils-2.4.27-no-nested-function.patch 1422 RMD160 6c34f6ff25019884495c21af525e88a63e449b3c SHA1 17eeaddba0fc3e476138a05d570eb79ab77b67ed SHA256 3e9961a7c9411e8c01eb48d9053d7901ec7a90ee0e070e85bd766385f36d563d
 AUX update-modules 11529 RMD160 f4ff9435a4ff40cbb7e24aae5a4c3c77b9302789 SHA1 d91933f8aa35d77961ff8f7eb90736c2f19f67bd SHA256 0fc8fa66a87790a9d411a2a282600b36ada09b230a70d164d1c1e9bd2850ee66
+AUX update-modules-3.4.sh 10281 RMD160 365fec375450ca29a24a8bba2e13e9f7b1b6946e SHA1 1cff7b9f376cb482960280d72195b1106d1f97a6 SHA256 b3a0c242f280a3a721ed1e6952bad35691d1c9584857a83922d4e2c09ab75150
 AUX update-modules.8 3210 RMD160 6d82ea356c1751ad46cf1c30e0fe237e7a4f50f2 SHA1 ed64791ca8e3215ee8a98784326f5d1c8a60bfd4 SHA256 4e352ee28ecaf79fac2a0216b8b4b52ced864cd258752f33213d1ac8f4a5849c
 DIST module-init-tools-3.2.2.tar.bz2 169182 RMD160 42abfe10709315180898106e3c7c1ce916e01166 SHA1 b51e8ac170be23a1f2e301a1dddd47a47ec2186a SHA256 c080f7e42e60456eab33051026da388b5d21a360e9d2bee26ce9991427a758aa
 DIST module-init-tools-3.4-manpages.tar.bz2 8819 RMD160 2d8e413dc0c85504494ef57508b0886ada487c03 SHA1 7c2d0d86391c4dfa8569f8fcf21cf3334dc323f5 SHA256 d26c038aa95d791436ce106a6b888d6487f0d9a47eb2962b1819ca1c1f112d4a
 DIST module-init-tools-3.4.tar.bz2 190437 RMD160 07ccb9043240e1499ad99557ce223a007751f13e SHA1 fcdf758d171211b72210d48b7303ccb5651a1850 SHA256 96c7a1b313722a5203d7a6c4cb89f09ac186f8565bb1666a6053979072633d87
 DIST modutils-2.4.27.tar.bz2 234963 RMD160 3179d364106859cf6dbd1fad82d8356337634735 SHA1 fa268b48d98e0efab349d45fa7fb2372d58320c1 SHA256 ab4c9191645f9ffb455ae7c014d8c45339c13a1d0f6914817cfbf30a0bc56bf0
 EBUILD module-init-tools-3.2.2-r3.ebuild 5306 RMD160 6a6f8cda50689d90bf746aa486e07bb1d0e4edc9 SHA1 40ae34059f69c9fd0ccf05b9483b7e99d9799332 SHA256 fde539909f359a3370a8020529129129e85b4a2cab53d6c5273ae03c678d0667
+EBUILD module-init-tools-3.4-r1.ebuild 5311 RMD160 8273d8411d166630bda8d982c4a9b42070e7f2d3 SHA1 55ef30e54a84193e7fcd5b8d1762035c023b9d6b SHA256 94fe09db8a4697445a7d886a7853a30c228b063b9548e213da390287e76a21db
 EBUILD module-init-tools-3.4.ebuild 5242 RMD160 c2d3732a931042553a4cd3af8a1a8339efa9f9a9 SHA1 3858328b3fb4cf1b30c10aafbe50a34272019937 SHA256 cc7dad37cd8de65e834faf99391879f321d61cc67b91ac9992d89cae6ef2cfed
-MISC ChangeLog 23859 RMD160 cb092ca570911334da7d13e6ef31132cddda2425 SHA1 85b72e48d94d0afb75c9c67e384741ef03022104 SHA256 76762be540dd5dc273848b470433ccac309fccf6c9960e521302f6f25bf46790
+MISC ChangeLog 24155 RMD160 91dfdfd459f6fe2d2cb159c78520201174d634fb SHA1 8338abc058084006af7707019ed5e90ae76e6131 SHA256 d4ba4436e31f6e9c020e037550ac56cf3a4d5db9d1e1aab4c08d9329ce410e0c
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH4HYsj9hvisErhMIRAiZ7AKC5U9cEFPG92cC5zk36T/13WZM+PgCg5kXL
++WL0X+ImDsJkXUHE+DCeFqI=
+=kAmt
+-----END PGP SIGNATURE-----
