@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/module-init-tools
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.136 2007/12/12 17:31:13 jer Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.137 2008/03/19 02:09:09 vapier Exp $
+
+*module-init-tools-3.4-r1 (19 Mar 2008)
+
+  19 Mar 2008; Mike Frysinger <vapier@gentoo.org>
+  +files/update-modules-3.4.sh, +module-init-tools-3.4-r1.ebuild:
+  Rewrite update-modules script. It is now leaner, POSIX-compat, and
+  encourages people to stop using deprecated module config files.
 
   12 Dec 2007; Jeroen Roovers <jer@gentoo.org> module-init-tools-3.4.ebuild:
   Stable for HPPA (bug #201444).
